Test/git-issues/git-issue-452b.dfy.expect
git-issue-452b.dfy(13,16): Error: ghost variables are allowed only in specification contexts
1 resolution/type errors detected in git-issue-452b.dfy
